--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <button id="parent">See all previous layers</button>
     <button id="child">See all next layers</button>
     <div id="diagramDiv" style="width:100%; height:100%"></div>
-    <script src='https://unpkg.com/gojs@latest/release/go.js'></script><script  src="./script.js"></script>
+    <script src='https://unpkg.com/gojs@latest/release/go.js'></script><script src="script.js"></script>
   </body>
 </html>
