--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <button id="next">See next layer</button>
     <button id="parent">See all previous layers</button>
     <button id="child">See all next layers</button>
+    <input id="input" type="text" placeholder="Search node">
+    <button id="find" onclick="search()">Submit</button>
     <div id="diagramDiv" style="width:100%; height:100%"></div>
     <script src='https://unpkg.com/gojs@latest/release/go.js'></script><script src="script.js"></script>
   </body>
